Auto-refresh: add platform watcher runtime (#34)
* Auto-refresh: add shared runtime mode contract

Expose default-on AutoRefreshMode through IndexinoConfiguration and persist the
chosen mode in the runtime lease. Daemon bootstrap now passes the mode to its
owner and rejects incompatible live-runtime attachments.

* Auto-refresh: watch resolved scope closures

Register daemon-owned source and topology input directories after successful
refreshes, coalesce relevant filesystem events, and schedule refreshes through
the existing shared dispatcher. Preserve disabled-mode manual refreshes and
record the resolved source closure from indexing.

* Auto-refresh: reconcile uncovered watch coverage

Bound scope directory registration, mark incomplete coverage unknown, and
periodically reconcile uncovered scopes through the shared refresh dispatcher.
Track dirty epochs so explicit disabled-mode refreshes clear only the state they
actually reconcile.

* CLI: expose disabled auto refresh mode

Wire --no-auto-refresh through daemon start/run and index connections, always
pass explicit cache roots to spawned owners, and document runtime mode behavior.

* Auto-refresh: preserve explicit progress fixture semantics

Name the runtime reconciliation default and run machine-progress fixture calls
with auto refresh disabled, so their explicit-refresh counters are not consumed
by a concurrent default-on daemon refresh.

* Auto-refresh: add native macOS FSEvents transport

Use a JDK 25 FFM FSEvents stream with exact path callbacks and overflow
reporting, selected for macOS while preserving the JDK watcher elsewhere.
Spawned daemon owners enable native access explicitly.

* Daemon status: report auto refresh mode

Expose the lease-owned AutoRefreshMode in daemon status JSON and cover it with
a real disabled daemon owner.

* FSEvents: mark method-handle callback as reachable

Suppress the static analyzer false positive for the private callback invoked by
the JDK FFM upcall stub.

* Auto-refres